--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,46 @@
 {
-    "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/g++.exe",
     "files.associations": {
-        "unordered_set": "cpp",
-        "iosfwd": "cpp",
-        "any": "cpp",
+        "dsu_with_structure": "cpp",
         "array": "cpp",
-        "atomic": "cpp",
-        "barrier": "cpp",
-        "bit": "cpp",
         "bitset": "cpp",
+        "string_view": "cpp",
+        "format": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "iostream": "cpp",
+        "mass segtree": "cpp",
+        "fft with mod": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "forward_list": "cpp",
+        "complex": "cpp",
+        "iomanip": "cpp",
+        "ostream": "cpp",
+        "limits": "cpp",
+        "barrier": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "queue": "cpp",
+        "random": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "utility": "cpp",
+        "algorithm": "cpp",
+        "any": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
         "cctype": "cpp",
         "cfenv": "cpp",
         "charconv": "cpp",
@@ -18,7 +50,6 @@
         "cmath": "cpp",
         "codecvt": "cpp",
         "compare": "cpp",
-        "complex": "cpp",
         "concepts": "cpp",
         "condition_variable": "cpp",
         "coroutine": "cpp",
@@ -34,67 +65,43 @@
         "cuchar": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "deque": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
         "exception": "cpp",
         "expected": "cpp",
-        "algorithm": "cpp",
         "functional": "cpp",
-        "iterator": "cpp",
         "memory": "cpp",
         "memory_resource": "cpp",
         "numeric": "cpp",
         "optional": "cpp",
-        "random": "cpp",
         "ratio": "cpp",
-        "regex": "cpp",
         "source_location": "cpp",
-        "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "utility": "cpp",
-        "flat_map": "cpp",
-        "flat_set": "cpp",
-        "format": "cpp",
         "fstream": "cpp",
         "future": "cpp",
-        "generator": "cpp",
-        "initializer_list": "cpp",
-        "iomanip": "cpp",
-        "iostream": "cpp",
+        "iosfwd": "cpp",
         "istream": "cpp",
         "latch": "cpp",
-        "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "numbers": "cpp",
-        "ostream": "cpp",
-        "print": "cpp",
-        "ranges": "cpp",
         "scoped_allocator": "cpp",
         "semaphore": "cpp",
         "shared_mutex": "cpp",
-        "span": "cpp",
         "spanstream": "cpp",
         "sstream": "cpp",
-        "stacktrace": "cpp",
         "stdexcept": "cpp",
-        "stdfloat": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
         "syncstream": "cpp",
-        "text_encoding": "cpp",
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "stdfloat": "cpp",
+        "__nullptr": "cpp",
+        "__bit_reference": "cpp",
+        "__string": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
