--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,107 +1,7 @@
 {
     "files.associations": {
-        "dsu_with_structure": "cpp",
-        "array": "cpp",
-        "bitset": "cpp",
-        "string_view": "cpp",
-        "format": "cpp",
-        "initializer_list": "cpp",
-        "ranges": "cpp",
-        "span": "cpp",
-        "stacktrace": "cpp",
-        "regex": "cpp",
-        "valarray": "cpp",
-        "iostream": "cpp",
-        "mass segtree": "cpp",
-        "fft with mod": "cpp",
         "*.tcc": "cpp",
-        "deque": "cpp",
-        "list": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "vector": "cpp",
-        "forward_list": "cpp",
-        "complex": "cpp",
-        "iomanip": "cpp",
-        "ostream": "cpp",
-        "limits": "cpp",
-        "barrier": "cpp",
-        "__hash_table": "cpp",
-        "__split_buffer": "cpp",
-        "__tree": "cpp",
-        "iterator": "cpp",
-        "map": "cpp",
-        "queue": "cpp",
-        "random": "cpp",
-        "set": "cpp",
-        "stack": "cpp",
-        "utility": "cpp",
-        "algorithm": "cpp",
-        "any": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "cctype": "cpp",
-        "cfenv": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "cinttypes": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "codecvt": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
-        "coroutine": "cpp",
-        "csetjmp": "cpp",
-        "csignal": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cuchar": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "exception": "cpp",
-        "expected": "cpp",
-        "functional": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "ratio": "cpp",
-        "source_location": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "fstream": "cpp",
-        "future": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "latch": "cpp",
-        "mutex": "cpp",
-        "new": "cpp",
-        "numbers": "cpp",
-        "scoped_allocator": "cpp",
-        "semaphore": "cpp",
-        "shared_mutex": "cpp",
-        "spanstream": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "stop_token": "cpp",
-        "streambuf": "cpp",
-        "syncstream": "cpp",
-        "thread": "cpp",
-        "typeindex": "cpp",
-        "typeinfo": "cpp",
-        "variant": "cpp",
-        "stdfloat": "cpp",
-        "__nullptr": "cpp",
-        "__bit_reference": "cpp",
-        "__string": "cpp"
+        "*.h": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
